# SfDR-code

./: CV format_template staff secondment (Word format).doc  README.md  divide.cpp  divide.h  main2.cpp
16-SDfR-PPD-Assignment1/assignment1/assignment1.1/src/: divide.cpp  main.cpp
16-SDfR-PPD-Assignment1/assignment1/assignment1.2/: Readme.txt
16-SDfR-PPD-Assignment1/assignment1/assignment1.2/src/: BMI.cpp
assignment1.2/src/: BMI.cpp  main.cpp
assignment1/assignment1.1/: Readme.txt  my_program
assignment1/assignment1.1/include/: divide.h
assignment1/assignment1.2/: .gitignore  Readme.txt
assignment1/assignment1.2/include/: BMI.h
assignment1/assignment1.2/src/: main.cpp
assignment2/: Readme.txt  a.out  maze.cpp
assignment2/include/: PrintArray.h  maze_utils.h
assignment2/src/: main.cpp  maze.cpp  traverse.cpp
assignment3/: README.txt  a.out
assignment3/include/: List.h  ListNode.h
assignment3/liststrees/__MACOSX/liststrees/: ._README.md
assignment3/liststrees/__MACOSX/liststrees/tree/: ._include
assignment3/liststrees/liststrees/: README.md
assignment3/liststrees/liststrees/linkedlist/include/: ListNode.h
assignment3/liststrees/liststrees/linkedlist/src/: main.cpp
assignment3/src/: main.cpp
assignment4/: Readme.txt  a.out
assignment4/include/: Package.h
assignment4/src/: Package.cpp  main.cpp
assignment5/16-SDfR-PPD-Assignment5/: README.txt
assignment5/16-SDfR-PPD-Assignment5/relbot_sequence_controller/: CMakeLists.txt  README.txt
assignment5/16-SDfR-PPD-Assignment5/relbot_sequence_controller/include/: steering.hpp
assignment5/16-SDfR-PPD-Assignment5/relbot_sequence_controller/src/: relbot_sequence_controller.cpp
assignment5/ros2_ws/install/relbot_simulator/include/: MotionProfiles.h
assignment5/ros2_ws/launch/: relbot_launch.py
assignment5/ros2_ws/log/: latest_build
assignment5/ros2_ws/src/install/: setup.bash  setup.ps1
assignment5/ros2_ws/src/relbot_adapter/: README.md
assignment5/ros2_ws/src/relbot_adapter/include/: relbot_adapter.hpp
assignment5/ros2_ws/src/relbot_adapter/src/: relbot_adapter.cpp
assignment5/ros2_ws/src/relbot_simulator/: package.xml
assignment5/ros2_ws/src/relbot_simulator/common/: EulerAngles.h  xxfuncs.cpp  xxinverse.cpp
assignment5/ros2_ws/src/relbot_simulator/src/: relbot_simulator.cpp
assignment6/assignment6.2/: README.md
assignment6/assignment6.2/src/: README_DELETE_BEFORE_SUBMISSION.txt
assignment6/assignment6.2/src/image_functions_sdfr/: CMakeLists.txt
assignment6/assignment6.2/src/relbot_launch/: README.txt
assignment6/assignment6.2/src/relbot_launch/launch/: colour_detector_launch.py
assignment6/assignment6.2/src/relbot_msgs/: CMakeLists.txt
assignment6/assignment6.3/: README.md
assignment6/assignment6.3/src/: README_DELETE_BEFORE_SUBMISSION.txt
assignment6/assignment6.3/src/image_functions_sdfr/: README.md
assignment6/assignment6.3/src/relbot_launch/: README.md
assignment6/assignment6.3/src/relbot_launch/launch/: relbot_turtlesim_launch.py
assignment6/assignment6.3/src/relbot_simulator/: README.md
assignment6/assignment6.4/: README.md  README.txt
assignment6/assignment6.4/src/: README_BEFORE_SUBMISSION_AND_DELETE.txt
assignment6/assignment6.4/src/XRF2/XenoRosFramework/Unit-Tests/IcoIo/: CMakeLists.txt
assignment6/assignment6.4/src/XRF2/XenoRosFramework/Unit-Tests/Logger/: CMakeLists.txt
assignment6/assignment6.4/src/XRF2/XenoRosFramework/Unit-Tests/Monitor/: CMakeLists.txt
assignment6/assignment6.4/src/image_functions_sdfr/src/: image_functions.cpp
assignment6/assignment6.4/src/relbot_launch/: README.md
assignment6/assignment6.4/src/sdfr_ppd/: main.cpp
assignment6/assignment6.5/: README.md
assignment6/assignment6.5/src/XRF2/: .gitignore
assignment6/assignment6.5/src/XRF2/Template/Template-Base/: CMakeLists.txt  main.cpp
assignment6/assignment6.5/src/image_functions_sdfr/: CHANGELOG.rst  package.xml
assignment6/assignment6.5/src/image_functions_sdfr/image_functions_sdfr/include/image_functions_sdfr/: visibility_control.h
assignment6/assignment6.5/src/image_functions_sdfr/include/image_functions_sdfr/: image_functions.hpp
assignment6/assignment6.5/src/relbot2turtlesim/: CMakeLists.txt  README.md
assignment6/assignment6.5/src/relbot_adapter/: README.md
assignment6/assignment6.5/src/relbot_launch/: CMakeLists.txt  README.md  package.xml
assignment6/assignment6.5/src/relbot_sequence_controller/: CMakeLists.txt  README.md  package.xml
assignment6/assignment6.5/src/relbot_simulator/: README.md
assignment6/assignment6.5/src/sdfr_ppd/: CMakeLists.txt  README.md
assignment6/ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
assignment6/ros2_ws/launch/: relbot_launch.py  webcam_test_launch.py
assignment6/ros2_ws/launch/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
assignment6/ros2_ws/launch/log/: latest_build
assignment6/ros2_ws/log/: latest_build
assignment6/ros2_ws/src/XRF2/Template/Template-20sim/: CMakeLists.txt
assignment6/ros2_ws/src/XRF2/Template/Template-20sim/src/: Template20Sim.cpp
assignment6/ros2_ws/src/relbot_msgs/: README.md
assignment6/ros2_ws/src/relbot_simulator/: CMakeLists.txt
assignment6/ros2_ws/src/sdfr_ppd/: main.cpp
ros2_ws/install/: local_setup.sh
ros2_ws/install/relbot_simulator/include/: xxmatrix.h
ros2_ws/launch/install/: local_setup.sh  setup.ps1  setup.zsh
ros2_ws/launch/log/: latest_build
ros2_ws/src/XRF2/: README.md
ros2_ws/src/XRF2/XenoRosFramework/: doxygen-config
ros2_ws/src/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/relbot_adapter/: CHANGELOG.md  CMakeLists.txt
ros2_ws/src/relbot_msgs/: CHANGELOG.md
ros2_ws/src/relbot_sequence_controller/relbot_sequence_controller/: README.md
ros2_ws/src/relbot_simulator/: CHANGELOG.md
ros2_ws/src/relbot_simulator/common/: EulerAngles.cpp  xxmatrix.cpp  xxmodel.h
ros2_ws/src/relbot_simulator/include/: relbot_simulator.hpp
ros2_ws/src/relbot_simulator/src/: Plant.cpp
ros2_ws/src/sdfr_ppd/controller/: LoopController.cpp
(+285 files in other folders)
