<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>image_functions_sdfr</name>
  <version>2.1.0</version>
  <description>Common operations on images</description>
  <maintainer email="j.j.hierck@student.utwente.nl">Jelle Hierck</maintainer>
  <maintainer email="g.vanoort@utwente.nl">Gijs van Oort</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
